--- a/classwork.html
+++ b/classwork.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./classwork.css" />
     <title>Fonts</title>
   </head>
   <body>
-    <p class="text">
+    <!-- <p class="text">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores,
       necessitatibus numquam iusto sequi totam ipsum tenetur ab eius obcaecati
       magnam. Voluptatem sapiente repellat deserunt quos quasi iusto aperiam
@@ -31,6 +27,12 @@
       necessitatibus ad velit nostrum ab! Voluptates, quisquam voluptatibus.
       Esse ullam, reprehenderit aspernatur similique harum accusantium sit
       illum.
+    </p> -->
+    <p class="paragraph">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum ullam
+      quae consectetur accusamus quibusdam aspernatur maiores nihil similique
+      expedita ducimus, necessitatibus doloribus magni laudantium adipisci?
+      Provident cum debitis maiores saepe?
     </p>
   </body>
 </html>
