--- a/classwork.html
+++ b/classwork.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
       integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -19,27 +19,47 @@
     <title>Fonts</title>
   </head>
   <body>
-    <!-- <p class="text">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores,
-      necessitatibus numquam iusto sequi totam ipsum tenetur ab eius obcaecati
-      magnam. Voluptatem sapiente repellat deserunt quos quasi iusto aperiam
-      dolorem labore. Ducimus nulla autem, tenetur at ullam sint in tempora
-      mollitia animi odio dicta, facere quaerat officiis possimus nesciunt?
-      Aspernatur nisi repellat quo iure? Ipsum impedit neque sequi blanditiis,
-      id delectus? Odit, non repudiandae cupiditate quisquam deserunt facere
-      possimus dolor nulla sit consequuntur velit iure eius quod ad impedit
-      accusantium quam fugit ipsum exercitationem? Dolorem nostrum nesciunt
-      dicta voluptate ipsum sapiente? Deserunt labore doloribus explicabo,
-      officia quidem asperiores culpa, magnam assumenda vero impedit facilis
-      necessitatibus ad velit nostrum ab! Voluptates, quisquam voluptatibus.
-      Esse ullam, reprehenderit aspernatur similique harum accusantium sit
-      illum.
-    </p> -->
-    <p class="paragraph">
+    <!-- <p class="paragraph">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum ullam
       quae consectetur accusamus quibusdam aspernatur maiores nihil similique
       expedita ducimus, necessitatibus doloribus magni laudantium adipisci?
       Provident cum debitis maiores saepe?
-    </p>
+    </p> -->
+    <main>
+      <section class="section">
+        <div class="container">
+          <h2 class="is-hidden">Переваги</h2>
+          <ul class="list">
+            <li>
+              <h3 class="heading">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3>ПУНКТУАЛЬНІСТЬ</h3>
+              <p>
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3>ПЛАНУВАННЯ</h3>
+              <p>
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p>
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
