--- a/classwork.html
+++ b/classwork.html
@@ -26,7 +26,7 @@
       Provident cum debitis maiores saepe?
     </p> -->
     <main>
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="is-hidden">Переваги</h2>
           <ul class="list">
@@ -50,7 +50,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="list-item">
               <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -59,7 +59,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+      <div class="containers">
+        <aside class="sidebar">sidebar</aside>
+        <main class="content">content</main>
+      </div>
     </main>
   </body>
 </html>
