--- a/index.html
+++ b/index.html
@@ -7,32 +7,23 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- first task -->
     <div class="box">
       <div class="box1"></div>
       <div class="box2"></div>
     </div>
-
+    <!-- the second task -->
     <div class="circle">
       <div class="circle1"></div>
       <div class="circle2"></div>
       <div class="circle3"></div>
     </div>
-
+    <!-- the third task -->
     <div class="box-figure">
       <div class="figure1"></div>
       <div class="figure2"></div>
       <div class="figure3"></div>
       <div class="figure4"></div>
-    </div>
-
-    <div class="list-box">
-      <div class="square1"></div>
-      <div class="square2"></div>
-      <div class="square3"></div>
-      <div class="square4"></div>
-      <div class="square5"></div>
-      <div class="square6"></div>
-      <div class="square7"></div>
     </div>
   </body>
 </html>
