--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button class="button-open" data-modal-open>Відкрити модалку</button>
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="button" data-modal-close>Close</button>
-      </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    <div class="box"></div>
+    <div class="box2"></div>
   </body>
 </html>
