--- a/index.html
+++ b/index.html
@@ -3,26 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="block">
-      <ul>
-        <li>
-          <p class="menu-here">Menu here</p>
-        </li>
-        <li>
-          <p>...</p>
-        </li>
-        <li>
-          <p>...</p>
-        </li>
-        <li>
-          <p>...</p>
-        </li>
-      </ul>
-    </div>
-    <button class="button">Анімація</button>
+    sfsdaafdsadssdf
+    <div>dfasfdsfdfgdfgfhth</div>
   </body>
 </html>
