--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <section class="hero"><h2 class="hero-heading">HERO</h2></section>
+      <section class="adventages"><h2></h2></section>
+      <section class="team"><h2></h2></section>
+      <section class="our-project"><h2></h2></section>
+      <section class="chill">
+        <h2></h2>
+      </section>
+    </main>
+    <footer>
+      <nav></nav>
+      <ul class="social-list">
+        <li></li>
+      </ul>
+    </footer>
+
     sfsdaafdsadssdf
     <div>dfasfdsfdfgdfgfhth</div>
   </body>
