--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
       <section class="our-project"><h2></h2></section>
       <section class="chill">
         <h2></h2>
+        <!-- block(section, header, footer) +  назва тега + модифікатор(який?) тобіш зелений, червоний, чорний тощо -->
+        <ul class="chill-list">
+          <li class="chill-item"><a href="" class="chill-link-orange"></a></li>
+          <li class="chill-item"><a href="" class="chill-link-green"></a></li>
+          <li class="chill-item"><a href="" class="chill-link-red"></a></li>
+          <li class="chill-item"><a href="" class="chill-link"></a></li>
+          <li class="chill-item"><a href="" class="chill-link"></a></li>
+        </ul>
       </section>
     </main>
     <footer>
       <nav></nav>
       <ul class="social-list">
-        <li></li>
+        <li><button class="button"></button></li>
       </ul>
     </footer>
 
