--- a/index.html
+++ b/index.html
@@ -17,14 +17,20 @@
       <section class="our-project"><h2></h2></section>
       <section class="chill">
         <h2></h2>
-        <!-- block(section, header, footer) +  назва тега + модифікатор(який?) тобіш зелений, червоний, чорний тощо -->
+        <!-- block(section, header, footer, nav) +  назва тега + модифікатор(який?) тобіш зелений, червоний, чорний тощо -->
         <ul class="chill-list">
-          <li class="chill-item"><a href="" class="chill-link-orange"></a></li>
-          <li class="chill-item"><a href="" class="chill-link-green"></a></li>
-          <li class="chill-item"><a href="" class="chill-link-red"></a></li>
-          <li class="chill-item"><a href="" class="chill-link"></a></li>
-          <li class="chill-item"><a href="" class="chill-link"></a></li>
+          <li class="chill-item"><a href="" class="chill-link-orange">adasds</a></li>
+          <li class="chill-item"><a href="" class="chill-link-green">sddsadd</a></li>
+          <li class="chill-item"><a href="" class="chill-link-red">sasdsadas</a></li>
+          <li class="chill-item"><a href="" class="chill-link">sdadssd</a></li>
+          <li class="chill-item"><a href="" class="chill-link">sdassd</a></li>
         </ul>
+
+        <button class="true">true</button>
+        <button class="warning">warning</button>
+        <button class="error">error</button>
+        <button></button>
+        <button></button>
       </section>
     </main>
     <footer>
