--- a/index.html
+++ b/index.html
@@ -1,46 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <nav></nav>
-    </header>
-    <main>
-      <section class="hero"><h2 class="hero-heading">HERO</h2></section>
-      <section class="adventages"><h2></h2></section>
-      <section class="team"><h2></h2></section>
-      <section class="our-project"><h2></h2></section>
-      <section class="chill">
-        <h2></h2>
-        <!-- block(section, header, footer, nav) +  назва тега + модифікатор(який?) тобіш зелений, червоний, чорний тощо -->
-        <ul class="chill-list">
-          <li class="chill-item"><a href="" class="chill-link-orange">adasds</a></li>
-          <li class="chill-item"><a href="" class="chill-link-green">sddsadd</a></li>
-          <li class="chill-item"><a href="" class="chill-link-red">sasdsadas</a></li>
-          <li class="chill-item"><a href="" class="chill-link">sdadssd</a></li>
-          <li class="chill-item"><a href="" class="chill-link">sdassd</a></li>
-        </ul>
+</head>
+<body>
 
-        <button class="true">true</button>
-        <button class="warning">warning</button>
-        <button class="error">error</button>
-        <button></button>
-        <button></button>
-      </section>
-    </main>
-    <footer>
-      <nav></nav>
-      <ul class="social-list">
-        <li><button class="button"></button></li>
-      </ul>
-    </footer>
+<div class="red"></div>
 
-    sfsdaafdsadssdf
-    <div>dfasfdsfdfgdfgfhth</div>
-  </body>
+<div class="yellow"></div>
+    <div style="background-color: green; max-width: 1600px; height: 
+    400px;"></div>
+    <!-- <form action="">
+        <input class="input" type="text">
+        <input class="input" type="text">
+        <input class="input" type="text">
+        <input class="input" type="text">
+        <button>Submit</button>
+        <button type="reset">reset</button>
+    </form> -->
+</body>
 </html>
