--- a/index.html
+++ b/index.html
@@ -3,39 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
 <body>
-    
-
-    <ul>
-        <li>
-            <picture>
-            <source srcset="
-            ./assets/imgs/partfolio/img1Dekstop1x.webp 1x, 
-            ./assets/imgs/partfolio/img1Dekstop2x.webp 2x,
-            ./assets/imgs/partfolio/img1Dekstop3x.webp 3x" media="(min-width: 1200px)"/>
-            <source srcset="
-            ./assets/imgs/partfolio/img1Tablet1x.webp 1x,
-            ./assets/imgs/partfolio/img1Tablet2x.webp 2x,
-            ./assets/imgs/partfolio/img1Tablet3x.webp 3x " media="(min-width: 768px)"/>
-            <source srcset="
-            ./assets/imgs/partfolio/img1Mobile1x.webp 1x,
-            ./assets/imgs/partfolio/img1Mobile2x.webp 2x,
-            ./assets/imgs/partfolio/img1Mobile3x.webp 3x" media="(min-width: 320px)"/>
-            <img src="./assets/imgs/partfolio/img1Mobile1x.webp" alt="Навушники">
-            </picture>
-        </li>
-
-
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-        <li><img src="" alt=""></li>
-    </ul>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">LIFESTYLE</a></li>
+                <li><a href="">PHOTODIARY</a></li>
+                <li><a href="">MUSIC</a></li>
+                <li><a href="">TRAVEL</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <ul class="list-hero">
+                    <li class="item-hero">
+                        <picture>
+                        <source srcset="./assets/img/1x/lifestyle1x.webp 1x, 
+                            ./assets/img/2x/lifestyle2x.webp 2x"/>
+                            <img class="picture-hero" src="./assets/img/1x/lifestyle1x.webp" alt="">
+                        </picture>
+                        <p class="p-hero">LIFESTYLE</p>
+                    <h1 class="title-hero">More than just a music festival <h1>
+                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+            <li class="item-hero">
+                        <picture>
+                        <source srcset="./assets/img/1x/coffe1x.webp 1x, 
+                            ./assets/img/2x/coffe2x.webp 2x"/>
+                            <img class="picture-hero" src="./assets/img/1x/coffe1x.webp" alt="coffe">
+                        </picture>
+                        <p class="p-hero">LIFESTYLE</p>
+                    <h1 class="title-hero">More than just a music festival <h1>
+                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                 <li class="item-hero">
+                        <picture>
+                        <source srcset="./assets/img/1x/dream1x.webp 1x, 
+                            ./assets/img/2x/dream2x.webp 2x"/>
+                            <img class="picture-hero" src="./assets/img/1x/dream1x.webp" alt="coffe">
+                        </picture>
+                        <p class="p-hero">LIFESTYLE</p>
+                    <h1 class="title-hero">More than just a music festival <h1>
+                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                 <li class="item-hero">
+                        <picture>
+                        <source srcset="./assets/img/1x/song1x.webp 1x, 
+                            ./assets/img/2x/song2x.webp 2x"/>
+                            <img class="picture-hero" src="./assets/img/1x/song1x.webp" alt="coffe">
+                        </picture>
+                        <p class="p-hero">LIFESTYLE</p>
+                    <h1 class="title-hero">More than just a music festival <h1>
+                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                <li class="item-hero">
+                        <picture>
+                        <source srcset="./assets/img/1x/winter1x.webp 1x, 
+                            ./assets/img/2x/winter2x.webp 2x"/>
+                            <img class="picture-hero" src="./assets/img/1x/winter1x.webp" alt="coffe">
+                        </picture>
+                        <p class="p-hero">LIFESTYLE</p>
+                    <h1 class="title-hero">More than just a music festival <h1>
+                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
