--- a/index.html
+++ b/index.html
@@ -3,77 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Bootstrap</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="">LIFESTYLE</a></li>
-                <li><a href="">PHOTODIARY</a></li>
-                <li><a href="">MUSIC</a></li>
-                <li><a href="">TRAVEL</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <div class="container">
-                <ul class="list-hero">
-                    <li class="item-hero">
-                        <picture>
-                        <source srcset="./assets/img/1x/lifestyle1x.webp 1x, 
-                            ./assets/img/2x/lifestyle2x.webp 2x"/>
-                            <img class="picture-hero" src="./assets/img/1x/lifestyle1x.webp" alt="">
-                        </picture>
-                        <p class="p-hero">LIFESTYLE</p>
-                    <h1 class="title-hero">More than just a music festival <h1>
-                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-            <li class="item-hero">
-                        <picture>
-                        <source srcset="./assets/img/1x/coffe1x.webp 1x, 
-                            ./assets/img/2x/coffe2x.webp 2x"/>
-                            <img class="picture-hero" src="./assets/img/1x/coffe1x.webp" alt="coffe">
-                        </picture>
-                        <p class="p-hero">LIFESTYLE</p>
-                    <h1 class="title-hero">More than just a music festival <h1>
-                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                 <li class="item-hero">
-                        <picture>
-                        <source srcset="./assets/img/1x/dream1x.webp 1x, 
-                            ./assets/img/2x/dream2x.webp 2x"/>
-                            <img class="picture-hero" src="./assets/img/1x/dream1x.webp" alt="coffe">
-                        </picture>
-                        <p class="p-hero">LIFESTYLE</p>
-                    <h1 class="title-hero">More than just a music festival <h1>
-                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                 <li class="item-hero">
-                        <picture>
-                        <source srcset="./assets/img/1x/song1x.webp 1x, 
-                            ./assets/img/2x/song2x.webp 2x"/>
-                            <img class="picture-hero" src="./assets/img/1x/song1x.webp" alt="coffe">
-                        </picture>
-                        <p class="p-hero">LIFESTYLE</p>
-                    <h1 class="title-hero">More than just a music festival <h1>
-                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                <li class="item-hero">
-                        <picture>
-                        <source srcset="./assets/img/1x/winter1x.webp 1x, 
-                            ./assets/img/2x/winter2x.webp 2x"/>
-                            <img class="picture-hero" src="./assets/img/1x/winter1x.webp" alt="coffe">
-                        </picture>
-                        <p class="p-hero">LIFESTYLE</p>
-                    <h1 class="title-hero">More than just a music festival <h1>
-                        <p class="text-hero">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-                </li>
-                </ul>
-            </div>
-        </section>
-    </main>
+    <!-- mt- margin-top pl-padding-top -->
+    <p class="mt-4 pl-3 tac">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolorem quae perferendis reiciendis dolorum corporis voluptatem, dolor voluptates laudantium fugit earum, aut aliquid, vero porro voluptate saepe. Maxime, illum sit?</p>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Show a second modal and hide this one with the button below.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Open second modal</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Hide this modal and show the first with the button below.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+      </div>
+    </div>
+  </div>
+</div>
+<button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
+
+
+
+    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 0%"></div>
+</div>
+<div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 25%"></div>
+</div>
+<div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 50%"></div>
+</div>
+<div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 75%"></div>
+</div>
+<div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar" style="width: 100%"></div>
+</div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 </body>
 </html>
