--- a/index.html
+++ b/index.html
@@ -5,19 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Bootstrap</title>
+    <style>
+      html{
+        margin-right: 30px;
+      }
+    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- розміткамає складатися з 3-ох основних частин 
+  1.Контейнер який вам потрібен
+2.Рядки (скільки вам необхідно)  
+3.Кологки (скільки вам необхідно)-->
+  <!-- <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-2 col-lg-4">
+          <img src="./img.jpg" alt="">
+        </div>
+        <div class="col-xl-2 col-lg-4">
+          <img src="./img.jpg" alt="">
+        </div>
+        <div class="col-xl-2 col-lg-4">
+          <img src="./img.jpg" alt="">
+        </div>
+        <div class="col-xl-2 col-lg-4">
+          <img src="./img.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section> -->
+  <section>
+    <div class="container">
+      <div class="row text-center mb-3">
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+    </div>
+
+    <div class="row text-center">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+    </div>
+    <div class="row text-center">
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+        <div class="col"><div class="card" style="width: 18rem;">
+  <img src="./img.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div></div>
+    </div>
+    </div>
+  </section>
     <!-- mt- margin-top pl-padding-top -->
-    <p class="mt-4 pl-3 tac">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolorem quae perferendis reiciendis dolorum corporis voluptatem, dolor voluptates laudantium fugit earum, aut aliquid, vero porro voluptate saepe. Maxime, illum sit?</p>
-
-
+    <!-- <p class="mt-4 pl-3 tac">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolorem quae perferendis reiciendis dolorum corporis voluptatem, dolor voluptates laudantium fugit earum, aut aliquid, vero porro voluptate saepe. Maxime, illum sit?</p> -->
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Launch demo modal
-</button>
-
+</button> -->
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -34,10 +126,6 @@
     </div>
   </div>
 </div>
-
-
-
-
 <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -72,8 +160,6 @@
 </div>
 <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Open first modal</button>
 
-
-
     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar" style="width: 0%"></div>
 </div>
@@ -88,7 +174,7 @@
 </div>
 <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
   <div class="progress-bar" style="width: 100%"></div>
-</div>
+</div> -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
